tests/toy/neg/001114_mutation.toylang
program a = { if a var sleep; } .
